# pyiota

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/pyiota/: __init__.py  base58.py  bcs.py  bcs_types.py  client.py  exceptions.py  rpc.py  sync_client.py  transaction.py
src/pyiota/crypto/: __init__.py  ed25519.py  signature.py
src/pyiota/types/: __init__.py  common.py  events.py  objects.py  transactions.py
tests/golden_vectors_generator/: README.md  generate.cjs  generate_signature.cjs
tests/integration/: conftest.py  test_queries.py  test_transfer.py
tests/unit/: conftest.py  golden_vectors.json  test_bcs.py  test_client.py  test_crypto.py  test_golden_vectors.py  test_transaction.py  test_types.py
